@@ -51,6 +51,10 @@
       <Project>{9C7EB468-F7C6-440D-9CE5-6EF81223BDC3}</Project>
       <Name>Cumberland.Drawing.OpenGL</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Cumberland.Data.PostGIS\Cumberland.Data.PostGIS.csproj">
+      <Project>{9C7EB468-F7C6-440D-9CE5-6EF81223BDC3}</Project>
+      <Name>Cumberland.Data.PostGIS</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
